# hashutil

./: .gitignore  Pipfile  checksum.bat  checksum.py  checksum.sh  hashutil.bat  hashutil.py  hashutil.sh  hashutil_cli.py  readme.md  setup.cfg
hashutil/: __init__.py  __main__.py  core.py
tests/unit/: test_core.py
