[metadata]
name = hashutil
version = attr: hashutil.__version__
description = Command line application that calculates hash digests for strings and files
long_description = file: readme.md
long_description_content_type = text/markdown
author = Aaron
author_email = pinatamostgrim@gmail.com
url = https://github.com/PinataMostGrim/hashutil
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Environment :: Console
    Programming Language :: Python :: 3

[options]
packages =
    hashutil
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    hashutil = hashutil.__main__:main
